--- a/inference.ipynb
+++ b/inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "f1875312",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "21a0663d",
    "metadata": {},
    "outputs": [],
@@ -35,16 +35,13 @@
     "\n",
     "        self.training_model, self.inference_model = self._build_models()\n",
     "\n",
-    "    # =====================================================================\n",
-    "    # --------------------------- BUILD MODELS -----------------------------\n",
-    "    # =====================================================================\n",
     "    def _build_models(self):\n",
     "\n",
     "        input_data = layers.Input(\n",
     "            name='input', shape=(self.IMG_W, self.IMG_H, 1), dtype='float32'\n",
     "        )\n",
     "\n",
-    "        # ----------------------- CNN BODY -----------------------\n",
+    "        # CNN (VGG)\n",
     "        x = layers.Conv2D(64, (3,3), padding='same', kernel_initializer='he_normal')(input_data)\n",
     "        x = layers.BatchNormalization()(x)\n",
     "        x = layers.Activation('relu')(x)\n",
@@ -77,7 +74,7 @@
     "        x = layers.BatchNormalization()(x)\n",
     "        x = layers.Activation('relu')(x)\n",
     "\n",
-    "        # ----------------------- CNN → RNN -----------------------\n",
+    "        # LSTM\n",
     "        x = layers.Reshape((16, 2048))(x)\n",
     "        x = layers.Dense(64, activation='relu', kernel_initializer='he_normal')(x)\n",
     "\n",
@@ -88,7 +85,7 @@
     "        y_pred = layers.Dense(self.num_classes, kernel_initializer='he_normal')(x)\n",
     "        y_pred = layers.Activation('softmax', name='softmax')(y_pred)\n",
     "\n",
-    "        # ----------------------- CTC Inputs -----------------------\n",
+    "        # CTC inputs\n",
     "        labels = layers.Input(name=\"the_labels\", shape=[self.MAX_TEXT_LENGTH], dtype=\"int32\")\n",
     "        input_length = layers.Input(name=\"input_length\", shape=[1], dtype=\"int32\")\n",
     "        label_length = layers.Input(name=\"label_length\", shape=[1], dtype=\"int32\")\n",
@@ -108,9 +105,6 @@
     "\n",
     "        return training_model, inference_model\n",
     "\n",
-    "    # =====================================================================\n",
-    "    # ----------------------------- PREPROCESS -----------------------------\n",
-    "    # =====================================================================\n",
     "    def add_padding(self, img, old_w, old_h, new_w, new_h):\n",
     "        h1, h2 = int((new_h - old_h) / 2), int((new_h - old_h) / 2) + old_h\n",
     "        w1, w2 = int((new_w - old_w) / 2), int((new_w - old_w) / 2) + old_w\n",
@@ -150,16 +144,12 @@
     "    \n",
     "        img = img.astype(np.float32) / 255.0\n",
     "    \n",
-    "        img = img.T                                 # ★ critical\n",
-    "        img = np.expand_dims(img, axis=-1)          # (128, 64, 1)\n",
-    "        img = np.expand_dims(img, axis=0)           # (1, 128, 64, 1)\n",
+    "        img = img.T                                \n",
+    "        img = np.expand_dims(img, axis=-1)          \n",
+    "        img = np.expand_dims(img, axis=0)           \n",
     "    \n",
     "        return img\n",
     "\n",
-    "\n",
-    "    # =====================================================================\n",
-    "    # ----------------------------- DECODE -----------------------------\n",
-    "    # =====================================================================\n",
     "    def decode(self, preds):\n",
     "        decoded = F.get_value(\n",
     "            F.ctc_decode(\n",
@@ -176,9 +166,6 @@
     "            result.append(text)\n",
     "        return result[0] if len(result) > 0 else \"\"\n",
     "\n",
-    "    # =====================================================================\n",
-    "    # ----------------------------- PUBLIC API -----------------------------\n",
-    "    # =====================================================================\n",
     "    def load(self, checkpoint):\n",
     "        self.inference_model.load_weights(checkpoint)\n",
     "        print(f\"✔ Weights loaded: {checkpoint}\")\n",
@@ -194,12 +181,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "3a997a38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_PATH = os.path.join(\"model\",\"HwTR_V7.h5\")\n",
+    "MODEL_PATH = os.path.join(\"model\",\"HwTR_V9.h5\")\n",
     "IMG_H = 64\n",
     "IMG_W = 128\n",
     "LETTERS = (\n",
@@ -220,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "0cf02095",
    "metadata": {},
    "outputs": [
@@ -228,7 +215,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✔ Weights loaded: model\\HwTR_V7.h5\n"
+      "✔ Weights loaded: model\\HwTR_V9.h5\n"
      ]
     }
    ],
@@ -238,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "7148bcde",
    "metadata": {},
    "outputs": [
@@ -246,13 +233,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 2s 2s/step\n",
+      "1/1 [==============================] - 12s 12s/step\n",
       "certain\n"
      ]
     }
    ],
    "source": [
-    "test_image = \"demo.png\"\n",
+    "test_image = os.path.join(\"src\", \"demo.png\")\n",
     "result = hwr.preprocess_and_recognize(test_image)\n",
     "print(result)"
    ]
