--- a/training_BiLSTM.ipynb
+++ b/training_BiLSTM.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c7fa0b73",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
     "TRAIN_LABEL = os.path.join(DATA_DIR, \"train_files.txt\")\n",
     "VALID_LABEL = os.path.join(DATA_DIR, \"valid_files.txt\")\n",
     "TEST_LABEL = os.path.join(DATA_DIR, \"test_files.txt\")\n",
-    "MODEL = os.path.join(\"model\", \"HwTR_V9.h5\")"
+    "MODEL = os.path.join(\"model\", \"HwTR_BiLSTM.h5\")"
    ]
   },
   {
@@ -101,7 +101,7 @@
    "metadata": {},
    "source": [
     "Load image path with the given labels from dataset.\n",
-    "We select the datas which are not more than 16 length and not have pucntuation."
+    "We select the datas which are not more than 16 length and not have punctuation."
    ]
   },
   {
@@ -776,7 +776,6 @@
     "labels = tf.keras.layers.Input(name='the_labels', shape=[MAX_TEXT_LENGTH], dtype='int32')\n",
     "label_length = tf.keras.layers.Input(name='label_length', shape=[1], dtype='int32')\n",
     "input_length = tf.keras.layers.Input(name='input_length', shape=[1], dtype='int32')\n",
-    "\n",
     "\n",
     "def ctc_lambda_func(args):\n",
     "    y_pred, labels, input_length, label_length = args\n",
