--- a/training_GRU.ipynb
+++ b/training_GRU.ipynb
@@ -5,7 +5,7 @@
    "id": "1f5c80fa",
    "metadata": {},
    "source": [
-    "# Handwritting Text Recognition CNN biGRU with CTC"
+    "# Handwritting Text Recognition CNN BiGRU with CTC"
    ]
   },
   {
