--- a/training_BiLSTM.ipynb
+++ b/training_BiLSTM.ipynb
@@ -763,13 +763,11 @@
     "x = tf.keras.layers.Dense(64, activation='relu', kernel_initializer='he_normal', name='dense1')(x)\n",
     "\n",
     "# RNN layer\n",
-    "# layer ten\n",
     "x = tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(units=256, return_sequences=True))(x)\n",
-    "# layer nine\n",
     "x = tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(units=256, return_sequences=True))(x)\n",
     "x = tf.keras.layers.BatchNormalization()(x)\n",
     "\n",
-    "# transforms RNN output to character activations:\n",
+    "# transforms RNN output to character activations\n",
     "x = tf.keras.layers.Dense(num_classes, kernel_initializer='he_normal', name='dense2')(x)\n",
     "iam_outputs = tf.keras.layers.Activation('softmax', name='softmax')(x)\n",
     "\n",
